--- a/style.css
+++ b/style.css
@@ -22,31 +22,35 @@ h2 {
     font-family: QUicksand;
 }
 
-#presentation, #projets, #hobbies {
+#presentation, #projects, #hobbies {
     min-height: 100vh;
     padding: 60px 0;
 }
 
+header {
+    background: #e9eaeb;
+}
+
 #presentation {
+    background: #f8f9fa;
+    display: flex;
+    align-items: center;
+}
+
+#projects {
     background: #e9eaeb;
     display: flex;
     align-items: center;
 }
 
-#projets {
-    background: #e9ecef;
-    display: flex;
-    align-items: center;
-}
-
 #hobbies{
-    background: #e9ecef;
+    background: #f8f9fa;
     display: flex;
     align-items: center;
 }
 
 #contact {
-    background: #f8f9fa;
+    background: #e9eaeb;
     padding: 60px 0;
 }
 
